fix: fix ollama too slow - convert from docker to local ollama

--- a/data/jupyter/test_mlflow_deployments.ipynb
+++ b/data/jupyter/test_mlflow_deployments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "84254f84-dc14-4b9d-926c-71e9f66cadb7",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "dd552dd0-35e0-49d3-a7b7-80fddd4aadb1",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "19317074-5e5b-4b07-b99b-f34bd85a3838",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "041e7d46-5b74-4345-82f0-6e4c7284d221",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "[Endpoint(name='ollama', endpoint_type='llm/v1/chat', model=RouteModelInfo(name='llama3', provider='openai'), endpoint_url='http://mlflow-deployments:5000/gateway/ollama/invocations', limit=None)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1ba00daf-3e62-4076-a226-4b2c37336b10",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'chatcmpl-785', 'object': 'chat.completion', 'created': 1714625380, 'model': 'llama3', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': \"A complex individual, indeed!\\n\\nConsidering your traits: bravery, hard-work, wisdom, and a hint of cunning (backstabbing), I would say you're most likely to be sorted into... Slytherin!\\n\\nSlytherin values ambition, cleverness, and resourcefulness, which aligns with your wise and hard-working nature. While bravery is not typically associated with Slytherin, your willingness to take calculated risks suggests that you might have a bit of the bold and daring spirit within you.\\n\\nHowever, be warned: your backstabbing tendencies might raise some eyebrows among the other Slytherins, who tend to prize loyalty and cunning over outright deception. Nonetheless, I think you'd find a certain... appreciation for the more... creative aspects of Slytherin's values.\\n\\nSo, there you have it! You're a Slytherin at heart!\\n\\nNow, if you'll excuse me, I need to get back to sorting the next student...\"}, 'finish_reason': 'stop'}], 'usage': {'prompt_tokens': 0, 'completion_tokens': 193, 'total_tokens': 193}}\n"
+      "{'id': 'chatcmpl-833', 'object': 'chat.completion', 'created': 1714627163, 'model': 'llama3', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': 'A complex individual, indeed!\\n\\nAfter careful consideration, I think you would be most suited for... Slytherin!\\n\\nYour bravery suggests that you\\'re willing to take risks and stand up for yourself. Your hard-work ethic implies a strong sense of determination and perseverance. Wisdom is an excellent quality, and it\\'s likely that you\\'ve developed this through your experiences.\\n\\nAnd, ahem, let\\'s just say that the \"backstabbing\" trait might be a bit... exaggerated, but I think Slytherin\\'s cunning nature and willingness to do whatever it takes to achieve their goals might appeal to you. You see, Slytherins are known for being resourceful and clever, often using their wit to get ahead.\\n\\nSo, there you have it! You\\'re most likely a Slytherin at heart.'}, 'finish_reason': 'stop'}], 'usage': {'prompt_tokens': 66, 'completion_tokens': 162, 'total_tokens': 228}}\n"
      ]
     }
    ],
