feat: finished auto evaluate process

--- a/data/jupyter/test_mlflow_deployments.ipynb
+++ b/data/jupyter/test_mlflow_deployments.ipynb
@@ -32,16 +32,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "19317074-5e5b-4b07-b99b-f34bd85a3838",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = mlflow.deployments.get_deploy_client()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "041e7d46-5b74-4345-82f0-6e4c7284d221",
    "metadata": {},
@@ -59,6 +49,37 @@
    ],
    "source": [
     "client.list_endpoints()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "19317074-5e5b-4b07-b99b-f34bd85a3838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = mlflow.deployments.get_deploy_client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "17657bf4-37fe-432e-a988-5d471195b917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Endpoint(name='ollama', endpoint_type='llm/v1/chat', model=RouteModelInfo(name='llama3', provider='openai'), endpoint_url='http://mlflow-deployments:5000/gateway/ollama/invocations', limit=None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.get_endpoint(\"ollama\")"
    ]
   },
   {
